--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="th">
-<head>
-    <base target="_top">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ฟอร์มร้องขอ Report</title>
-</head>
-<body>
-    <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbwwzGkLW64Rly0dmZeAtZeq-Ns5XMeP-Mso-wy-lNbByxlGQmm63DUcjyjt_lFJ4GGH/exec" frameborder="0"></iframe>
-</body>
+
+<html>
+   <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+      <base target="_top">
+   </head>
+   <body>
+      <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbwwzGkLW64Rly0dmZeAtZeq-Ns5XMeP-Mso-wy-lNbByxlGQmm63DUcjyjt_lFJ4GGH/exec"></iframe>
+   </body>
 </html>
